feat: eventos por turno, aluno edita cadastro e novas regras de pontuação
(cherry picked from commit c7a28be7a431bac30ea32dc8ca09b239b9ec4873)
